--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Dafokal/P3_FOURNIER.git"
+    "url": "git+https://github.com/Dafokal/FournierMichael_3_20122021.git"
   },
   "author": "Fournier_Michael",
   "license": "ISC",
