Optimized code step 2, prefixed css

--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   "bugs": {
     "url": "https://github.com/Dafokal/P3_FOURNIER/issues"
   },
-  "homepage": "https://github.com/Dafokal/P3_FOURNIER#readme"
+  "homepage": "https://dafokal.github.io/FournierMichael_3_20122021/"
 }
